Bug 390787 - Many fonts and widgets do not display: assert that cairo_scaled_font_create succeeds but recover if it doesn't p=Karl Tomlinson <mozbugz@karlt.net> r+sr=pavlov a=1.9 blocker