gfx/thebes/src/gfxOS2Fonts.cpp
@@ -336,7 +336,8 @@ cairo_scaled_font_t *gfxOS2Font::CairoScaledFont()
         cairo_font_options_destroy(fontOptions);
     }
 
-    NS_ASSERTION(mScaledFont, "Failed to make scaled font");
+    NS_ASSERTION(cairo_scaled_font_status(mScaledFont) == CAIRO_STATUS_SUCCESS,
+		 "Failed to make scaled font");
     return mScaledFont;
 }
 
@@ -361,11 +362,13 @@ PRBool gfxOS2Font::SetupCairoFont(cairo_t *aCR)
 
     // this implicitely ensures that mScaledFont is created if NULL
     cairo_scaled_font_t *scaledFont = CairoScaledFont();
-    if (NS_LIKELY(scaledFont)) {
-        cairo_set_scaled_font(aCR, scaledFont);
-        return PR_TRUE;
+    if (cairo_scaled_font_status(scaledFont) != CAIRO_STATUS_SUCCESS) {
+        // Don't cairo_set_scaled_font as that would propagate the error to
+        // the cairo_t, precluding any further drawing.
+        return PR_FALSE;
     }
-    return PR_FALSE;
+    cairo_set_scaled_font(aCR, scaledFont);
+    return PR_TRUE;
 }
 
 /**********************************************************************
